[package]
name = "termin"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.61.3"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_System_Variant",
]
